# fln

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  fln-thesis.yml  pages.yml
action/: action.yml
anchors/: v0.2.1-genesis.anchor.json
crates/fln-cli/: Cargo.toml  README.md
crates/fln-cli/src/: main.rs
crates/fln-core/: Cargo.toml  README.md
crates/fln-core/benches/: core_bench.rs
crates/fln-core/examples/: wire_compat.rs
crates/fln-core/src/: anchor.rs  canonical.rs  causal.rs  decay.rs  ledger.rs  lib.rs  merkle.rs  thesis.rs
crates/fln-core/tests/: properties.rs  topo_vectors.rs  vectors.rs
crates/fln-store/: Cargo.toml  LICENSE-MIT  README.md
crates/fln-store/src/: lib.rs
examples/: btc_thesis.rs
ietf/: draft-fln-falsifier-ledger-00.md
python/fln/: README.md  pyproject.toml
python/fln-mcp/: README.md  pyproject.toml
python/fln-mcp/src/fln_mcp/: __init__.py  server.py
python/fln-mcp/tests/: test_server_smoke.py
python/fln-oracle/: README.md  pyproject.toml
python/fln-oracle/src/fln_oracle/: __init__.py  cli.py  evaluator.py  predicate.py  sources.py
python/fln-oracle/tests/: test_evaluator.py
python/fln/src/fln/: __init__.py  anchor.py  canonical.py  causal.py  decay.py  ledger.py  merkle.py  sign.py  thesis.py
python/fln/tests/: test_canonical.py  test_causal.py  test_decay.py  test_merkle.py  test_schema_conformance.py  test_sign.py  test_thesis.py  test_topo_vectors.py  test_vectors.py
schema/: causal_dag.schema.json  falsifier.schema.json  signed_claim.schema.json  thesis.schema.json
scripts/: generate-vectors.py  integration-test.sh  wire_compat.py
skill/: README.md  SKILL.md
src/: sign.rs  thesis.rs
tests/vectors/v1/: all-causal-kinds.thesis.json  empty.thesis.json  falsifier-deadline.thesis.json  manifest.json  multi-falsifier.thesis.json  rich-causal.thesis.json  single-falsifier.thesis.json  topo_order.json  utf8-claim.thesis.json
theses/: btc-2026-q2.claim.json  btc-2026-q2.predicates.json  btc-2026-q2.thesis.json  portfolio-drawdown.claim.json  portfolio-drawdown.predicates.json  portfolio-drawdown.thesis.json
