[package]
name = "fln-core"
version = "0.1.0"
edition = "2024"
description = "Falsifier Ledger Network — Merkle DAG + Ed25519 signing + Causal Decay weighting"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hexisteme/fln"
readme = "README.md"
keywords = ["falsifier", "merkle", "ed25519", "causal", "ledger"]
categories = ["data-structures", "cryptography"]

[dependencies]
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
thiserror = "1.0"

[dev-dependencies]
hex = "0.4"
