[workspace]
resolver = "2"
members = ["crates/fln-core", "crates/fln-cli", "crates/fln-store"]

[workspace.package]
version = "0.2.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hexisteme/fln"
authors = ["hexisteme <hexisteme@gmail.com>"]

[workspace.dependencies]
fln-core = { path = "crates/fln-core", version = "0.2.1" }
fln-store = { path = "crates/fln-store", version = "0.2.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
