[package]
name = "fln-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Falsifier Ledger Network — command-line interface"
readme = "README.md"
keywords = ["falsifier", "merkle", "ed25519", "causal", "ledger"]
categories = ["command-line-utilities", "cryptography"]

[[bin]]
name = "fln"
path = "src/main.rs"

[dependencies]
fln-core = { workspace = true }
fln-store = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = "1.0"
hex = "0.4"
rand = "0.8"
