[package]
name = "fln-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Falsifier Ledger Network — Merkle DAG + Ed25519 signing + Causal Decay weighting"
readme = "README.md"
keywords = ["falsifier", "merkle", "ed25519", "causal", "ledger"]
categories = ["data-structures", "cryptography"]
# These tests reference workspace-level fixtures and only work in the
# repo layout. Exclude from the published crate so `cargo install` + `cargo
# test` works for downstream consumers.
exclude = ["tests/vectors.rs", "tests/topo_vectors.rs"]

[dependencies]
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
sha2 = "0.10"
serde = { workspace = true }
serde_json = { workspace = true }
rand = "0.8"
thiserror = "1.0"
unicode-normalization = "0.1"

[dev-dependencies]
hex = "0.4"
proptest = "1.5"
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "core_bench"
harness = false
