[package]
name = "fln-store"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "FLN L2 — SQLite-backed append-only ledger for fln-core"
readme = "README.md"

[dependencies]
fln-core = { workspace = true }
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "1.0"

[dev-dependencies]
tempfile = "3"
