[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fln-mcp"
version = "0.1.0"
description = "MCP server exposing FLN thesis / ledger / causal / decay operations"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "hexisteme", email = "hexisteme@gmail.com" }]
dependencies = [
  "fln>=0.1.0",
  "mcp>=1.0",
]

[project.scripts]
fln-mcp = "fln_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fln_mcp"]
