[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fln"
version = "0.1.0"
description = "Falsifier Ledger Network — Python reference implementation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "hexisteme", email = "hexisteme@gmail.com" }]
dependencies = [
  "cryptography>=42.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.urls]
Repository = "https://github.com/hexisteme/fln"

[tool.hatch.build.targets.wheel]
packages = ["src/fln"]
